# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: minishell.h  my_colours.h
libft/: CMakeLists.txt  Makefile
libft/inc/: libft.h
libft/src/: ft_atoi.c  ft_isspace.c  ft_itoa.c  ft_strlen.c
src/: main.c
src/0_init/: input.c  signals.c
src/1_parser/: dollar.c  parsing.c  pipe_redirect.c  post_parser.c  pre_parsing.c
src/_utils/: cleaning.c  srt_cmd.c  support.c  utils.c
src/cmd/: cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
src/env/: export_env.c  init_env.c  u_env.c
src/exec/: cmd_arr.c  exec.c
src/init/: input.c  signals.c
src/parser/: dollar.c  dollar_copy.c  limiter.c  parsing.c  pipe_redirect.c  post_parser.c  pre_parsing.c
src/pipe/: pipes.c  u_pipes.c
src/utils/: cleaning.c  srt_cmd.c  support.c  utils.c
